v1.3.0/product-specifications/core-functions/3.-validate-event.md
# 3. Validate event

In order to register the vital event, the declaration form must be validated by checking all the details recorded and any supporting documents attached.

In OpenCRVS, the declaration form can be reviewed side by side with the supporting documents to ensure that it is accurate before the vital event is registered. If the information is correct, the Registrar can go on to register the vital event; if it is not correct, it can be sent for updates.

In the case where a Registrar has an assistant to conduct initial checks, the Registration Agent can review a declaration and subsequently send it for approval to the Registrar.

### **Pre-condition**

A record is in the Ready for Review workqueue with the status ‘In Review’

### **Triggers**

A Registration Agent or Registrar assigns and downloads the declaration

### **Standard flow**

1. Registration Agent or Registrar navigates to Ready for Review workqueue
2. User assigns themselves to the record
3. Declaration is downloaded and is now available to be validated offline
4. User clicks “Review”
5. User validates declaration against supporting documents
6. Depending on who is validating the record there are different actions on the review page:
   1. If Registrar then they can Register the declaration
   2. If Registration Agent they can then send the declaration for approval
7. User is prompted to confirm their action
8. On confirming, declaration is sent to the Outbox for processing
9. Once processed the declaration status is updated to ‘Validated’

### **Post conditions**

* Declaration is sent to the appropriate users workqueue
  1. If Sent for approval → Goes to the Registrar’s Ready to review workqueue, and the Registration Agents Sent for Approval workqueue
  2. IF Registrar → Goes to the Ready to Print workqueue
* Record audit is updated to show that the record has been ‘Validated’

### **Variations/Exceptions**

* If updates are required and the user is unable to make them at this time. The can choose to send the declaration to the Requires Updates workqueue. Informant receives sms notification that their declaration was rejected and recommend them to visit the office.
* The validator can choose to change a part of the declaration. If so they will receive a warning prompt about making changes. Before navigating them to the required section of the form. A audit log of this change is recorded in Record Audit.

{% embed url="https://www.loom.com/share/8a65657f324c4d028c4ed975711706c9?sid=00735b1b-c2ff-4432-8126-a88bbd02439b" %}
